--- a/src/main/resources/templates/goods_list.html
+++ b/src/main/resources/templates/goods_list.html
@@ -24,8 +24,8 @@
         }
 
         body {
-            background: url('/img/bg2.jpg') no-repeat;
-            background-size: 100% 100%;
+            // background: url('/img/bg2.jpg') no-repeat;
+            // background-size: 100% 100%;
         }
 
         #goodslist td {
